Light touches to theme

--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Removing Complexity
-email: contact@removingcomplexity.com
+email: contact@rmcomplexity.com
 author: Josue Balandrano Coronel
 description: >- # this means to ignore newlines until "baseurl:"
-  Our aim is that of removing complexity as much as possible
-  from software developing/engineering one post at a time.
+  Helping removing complexity from software development/engineering.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rmcomplexity
