--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,7 @@ plugins:
   - jemoji
   - jekyll-seo-tag
   - jekyll-paginate
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
